cilium-cli/connectivity/builder/manifests/template/testdata/generate_dns_match_pattern/in.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "client-egress-tls-sni-wildcard-match-patterns"
specs:
- description: "TLS SNI policy with full prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "any-prefix" }}"
- description: "TLS SNI policy with random full prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random-any-prefix" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random-any-prefix" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random-any-prefix" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random-any-prefix" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random-any-prefix" }}"
- description: "TLS SNI policy with subdomain prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "subdomain-prefix" }}"
- description: "TLS SNI policy with random wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random" }}"
      - "{{ generateDNSMatchPatternWithWildcard .ExternalTarget .ExternalTargetOther "random" }}"
