cilium-cli/connectivity/builder/manifests/template/testdata/generate_dns_match_pattern/out-default.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "client-egress-tls-sni-wildcard-match-patterns"
specs:
- description: "TLS SNI policy with full prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "**.one."
- description: "TLS SNI policy with random full prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "**.one.one.one."
      - "**.one."
      - "**.one.one."
      - "**.one.one."
      - "**.one.one."
- description: "TLS SNI policy with subdomain prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "*.one.one.one."
- description: "TLS SNI policy with random wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "on*.one.one.one."
      - "one.one.on*.one."
      - "*ne.one.one.one."
      - "one.one.o*e.one."
      - "one.one.*ne.one."
