cilium-cli/connectivity/builder/manifests/template/testdata/generate_dns_match_pattern/out.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "client-egress-tls-sni-wildcard-match-patterns"
specs:
- description: "TLS SNI policy with full prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "**.default.svc.cluster.local."
- description: "TLS SNI policy with random full prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "**.foo-bar.example.default.svc.cluster.local."
      - "**.foo-bar.example.default.svc.cluster.local."
      - "**.default.svc.cluster.local."
      - "**.default.svc.cluster.local."
      - "**.foo-bar.example.default.svc.cluster.local."
- description: "TLS SNI policy with subdomain prefix wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "*.foo-bar.example.default.svc.cluster.local."
- description: "TLS SNI policy with random wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "test.foo-ba*.example.default.svc.cluster.local."
      - "test.foo-bar.e*ample.default.svc.cluster.local."
      - "test.foo-b*r.example.default.svc.cluster.local."
      - "t*.foo-bar.example.default.svc.cluster.local."
      - "test.foo-bar.exa*ple.default.svc.cluster.local."
